<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.gao.coniel.coniel_gao.Galeria" >

    <item
        android:id="@+id/menu_save"
        android:showAsAction="withText|ifRoom"
        android:icon="@drawable/ic_action_new_picture"
        android:title="@string/textibtnagregar"
        tools:ignore="AppCompatResource" />

    <item
        android:id="@+id/menu_geo"
        android:showAsAction="withText|ifRoom"
        tools:ignore="AppCompatResource"
        android:icon="@drawable/ic_action_location"
        android:title= "@string/textactualizargeo"/>

    <item
        android:id="@+id/menu_new"
        android:showAsAction="withText|ifRoom"
        tools:ignore="AppCompatResource"
        android:icon="@drawable/ic_action_discard"
        android:title="@string/textobtnEliminar"/>

    <!--android:showAsAction="ifRoom|withText"-->
</menu>
