<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.gao.coniel.coniel_gao.BusquedaDatosAbonado"
    android:background="@android:color/white"
    android:baselineAligned="false"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:orientation="vertical"
                android:layout_marginTop="70dp"
                android:layout_marginBottom="50dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:text="@string/cuenta"
                        android:textStyle="bold"
                        android:textSize="@dimen/titulop"
                        android:id="@+id/txtcuenta"/>

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="2"
                        android:textSize="@dimen/titulop"
                        android:id="@+id/EditTextCuenta"
                        android:editable="false"
                        android:singleLine="true"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingTop="5dp"
                    >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:text="@string/nombre"
                        android:textStyle="bold"
                        android:textSize="@dimen/titulop"
                        android:id="@+id/txtnombre"/>

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="2"
                        android:textSize="@dimen/titulop"
                        android:id="@+id/EditTextAbonado"
                        android:editable="false"
                        android:singleLine="true"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingTop="5dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:text="@string/ruCi"
                        android:textStyle="bold"
                        android:textSize="@dimen/titulop"
                        android:id="@+id/txtCiRuc"/>

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="2"
                        android:textSize="@dimen/titulop"
                        android:id="@+id/EditTextCedulaRuc"
                        android:editable="false"
                        android:singleLine="true"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingTop="5dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:text="@string/geo"
                        android:textStyle="bold"
                        android:textSize="@dimen/titulop"
                        android:id="@+id/txtGeocodigo"/>

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="2"
                        android:textSize="@dimen/titulop"
                        android:id="@+id/EditTextGeocodigo"
                        android:editable="false"
                        android:singleLine="true"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingTop="5dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:text="@string/direccion"
                        android:textStyle="bold"
                        android:textSize="@dimen/titulop"
                        android:id="@+id/txtDireccion"/>

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="2"
                        android:textSize="@dimen/titulop"
                        android:id="@+id/EditTextDireccion"
                        android:editable="false"
                        android:focusable="false"
                        android:singleLine="true"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingTop="5dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:text="@string/interseccion"
                        android:textStyle="bold"
                        android:textSize="@dimen/titulop"
                        android:id="@+id/txtInterseccion"/>

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="2"
                        android:textSize="@dimen/titulop"
                        android:id="@+id/EditTextInterseccion"
                        android:editable="false"
                        android:singleLine="true"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingTop="5dp"
                    >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:text="@string/urbanizacion"
                        android:textStyle="bold"
                        android:textSize="@dimen/titulop"
                        android:id="@+id/txtUrbanizacion"/>

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="2"
                        android:textSize="@dimen/titulop"
                        android:id="@+id/EditTextUrbanizacion"
                        android:editable="false"
                        android:singleLine="true"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingTop="5dp"
                    >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:text="@string/estado"
                        android:textStyle="bold"
                        android:textSize="@dimen/titulop"
                        android:id="@+id/txtEstado"/>

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="2"
                        android:textSize="@dimen/titulop"
                        android:id="@+id/EditTextEstado"
                        android:editable="false"
                        android:singleLine="true"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingTop="5dp"
                    >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:text="@string/deuda"
                        android:textStyle="bold"
                        android:textSize="@dimen/titulop"
                        android:id="@+id/txtDeuda"/>

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="2"
                        android:textSize="@dimen/titulop"
                        android:id="@+id/EditTextDeuda"
                        android:editable="false"
                        android:singleLine="true"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingTop="5dp"
                    >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:text="@string/mesesDeuda"
                        android:textStyle="bold"
                        android:textSize="@dimen/titulop"
                        android:id="@+id/txtMesDeuda"
                        android:layout_gravity="center_vertical"/>

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="2"
                        android:textSize="@dimen/titulop"
                        android:id="@+id/EditTextMesDeuda"
                        android:editable="false"
                        android:singleLine="true"/>

                </LinearLayout>

            </LinearLayout>

        </ScrollView>

    </LinearLayout>

</LinearLayout>
